latest patch for LUCENE-1458
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/flex_1458@824918 13f79535-47bb-0310-9956-ffa450edef68